--- a/unet_pipeline/experiments/albunet_valid/train_config_part0.yaml
+++ b/unet_pipeline/experiments/albunet_valid/train_config_part0.yaml
@@ -1,6 +1,6 @@
 #main
 PIPELINE_NAME: albunet_1024
-DATA_DIRECTORY: '/content/dataset350'
+DATA_DIRECTORY: '/content/content/dataset350'
 LOGGER_DIR: 'log'
 
 SEED: 42
@@ -61,7 +61,7 @@ SCHEDULER:
 BATCH_SIZE: 16
 GRADIENT_ACCUMULATION_STEPS: 1
 GRADIENT_CLIPPING: 0.1
-EPOCHES: 50
+EPOCHES: 5
 EARLY_STOPPING: 10
 
 # saving
